--- a/index.html
+++ b/index.html
@@ -71,16 +71,22 @@
   <input type="text" id="userInput" placeholder="How are you feeling?" />
   <button id="sendBtn">Send</button>
 
-  <!-- ✅ Use stable CDN version of Sentimood -->
+  <!-- ✅ Load Sentimood from stable source -->
   <script src="https://cdn.jsdelivr.net/npm/sentimood@1.0.6/lib/sentimood.min.js"></script>
 
-  <!-- ✅ Custom script AFTER Sentimood is loaded -->
+  <!-- ✅ Custom script after library is loaded -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
+      // 🛡 Safety check
+      if (typeof Sentimood === 'undefined') {
+        alert("Error loading Sentimood library. Please check your internet connection or try again.");
+        return;
+      }
+
+      const sentiment = new Sentimood();
       const chat = document.getElementById('chat');
       const input = document.getElementById('userInput');
       const sendBtn = document.getElementById('sendBtn');
-      const sentiment = new Sentimood();
 
       function addMessage(text, sender) {
         const div = document.createElement('div');
@@ -107,15 +113,15 @@
 
         let reply = '';
         if (score < -3) {
-          reply = "I'm really sorry you're feeling this way. I'm here for you. Would you like to write about what's going on?";
+          reply = "I'm really sorry you're feeling this way. I'm here for you.";
         } else if (score < 0) {
-          reply = "That sounds tough. Let's take a deep breath together. Want a calming journaling prompt?";
+          reply = "That sounds tough. Want a calming journaling prompt?";
         } else if (score === 0) {
-          reply = "Hmm, I hear you. Would you like to explore your thoughts through a guided prompt?";
-        } else if (score > 0 && score < 3) {
-          reply = "Glad you're feeling okay. Would you like to reflect on what helped you today?";
+          reply = "Thanks for sharing. Want to reflect on your day?";
+        } else if (score < 3) {
+          reply = "Nice to hear that. Let’s explore what’s working well.";
         } else {
-          reply = "That's wonderful! Want to note down what made you feel this happy?";
+          reply = "That's great! Keep holding on to that joy!";
         }
 
         addMessage(reply, 'ai');
@@ -123,7 +129,6 @@
       }
 
       sendBtn.addEventListener('click', respond);
-
       input.addEventListener('keypress', function (e) {
         if (e.key === 'Enter') {
           respond();
